fix: update config example

--- a/config.env.example
+++ b/config.env.example
@@ -1,4 +1,5 @@
 SPOTIFY_CLIENT_ID = "..."
 SPOTIFY_CLIENT_SECRET = "..."
-PLAYLIST_ID = "..."
 GIPHY_API = "..."
+GENIUS_CLIENT = "..."
+GENIUS_SECRET = "..."
